src/objects/PDF_to_VFP_Admin_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This holds the admin credentials for the PDF to VFP managed package. Allows non-admin users the ability to temporarily connect to the tooling api.</description>
    <fields>
        <fullName>App_Authentication_Base_URL__c</fullName>
        <description>The base url for the connected apps authentication endpoint.</description>
        <inlineHelpText>The base url for the connected apps authentication endpoint.</inlineHelpText>
        <label>App Authentication Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>The client id for the pdf to vfp connected app setup in your organization.</description>
        <inlineHelpText>The client id for the pdf to vfp connected app setup in your organization.</inlineHelpText>
        <label>Client Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>The client secret for the PDF to VFP connected app setup in your org.</description>
        <inlineHelpText>The client secret for the PDF to VFP connected app setup in your org.</inlineHelpText>
        <label>Client Secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <description>The grant type you are utilizing to connect to your PDF to VFP connected app.</description>
        <inlineHelpText>The grant type you are utilizing to connect to your PDF to VFP connected app.</inlineHelpText>
        <label>Grant Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The password for the admin user you are utilizing to connect to the connected app that you setup for the PDF to VFP converter.</description>
        <inlineHelpText>The password for the admin user you are utilizing to connect to the connected app that you setup for the PDF to VFP converter.</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <description>The security token for the admin user you are using to connect to the PDF to VFP converter.</description>
        <inlineHelpText>The security token for the admin user you are using to connect to the PDF to VFP converter.</inlineHelpText>
        <label>Security Token</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username of the admin user you are utilizing to connect to your connected app for the PDF to VFP converter.</description>
        <inlineHelpText>The username of the admin user you are utilizing to connect to your connected app for the PDF to VFP converter.</inlineHelpText>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PDF to VFP Admin Credentials</label>
</CustomObject>